[gd_scene load_steps=12 format=2]

[ext_resource path="res://graphical/title.png" type="Texture" id=1]
[ext_resource path="res://graphical/Orange Juice.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://graphical/ButtonStyles/ButtonsHover.stylebox" type="StyleBox" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/CopyrightLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://graphical/ButtonStyles/ButtonNormal.stylebox" type="StyleBox" id=6]
[ext_resource path="res://graphical/ButtonStyles/ButtonPressed.stylebox" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1800.0
margin_bottom = 960.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1800.0
margin_bottom = 463.0
mouse_filter = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 639.0
margin_top = 166.0
margin_right = 1161.0
margin_bottom = 296.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 733.0
margin_top = 467.0
margin_right = 1067.0
margin_bottom = 930.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="StartGame" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 334.0
margin_bottom = 97.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "Start Game"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 334.0
margin_bottom = 206.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="Help" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 334.0
margin_bottom = 315.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "Help"

[node name="EndGame" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 365.0
margin_right = 334.0
margin_bottom = 424.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 4 )
text = "End Game"

[node name="CopyrightLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 934.0
margin_right = 1800.0
margin_bottom = 959.0
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/EndGame" to="." method="_on_EndGame_pressed"]
